# voxel-game

./: .gitignore  Cargo.toml
assets/textures/: atlas.ase
assets/worlds/main/: world.json
src/: block.rs  camera.rs  chunk.rs  data.rs  face.rs  lighting.rs  main.rs  player.rs  svo.rs  terrain.rs  voxel.rs  world.rs
src/data/: mod.rs
