[package]
name = "voxel-game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bincode = "1.3.3"
bitmatch = "0.1.1"
block-mesh = "0.2.0"
noise = "0.9.0"
rand = "0.9.0"
serde = "1.0.218"
serde_json = "1.0.134"
thiserror = "2.0.12"
